--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p>Name: </p>
     <p>email: </p>
     <h1>Gayuth</h1>
-    <p>Name: </p>
-    <p>email: </p>
+    <p>Name: Gayuth Waidyaratne</p>
+    <p>email: gayuthdemika@gmail.com</p>
     <h1>Luhansa</h1>
     <p>Name: </p>
     <p>email: </p>
