--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Minsara</h1>
-    <p>Name: </p>
-    <p>email: </p>
+    <p>Name: Minsara</p>
+    <p>email: minsarasammanitha@gmail.com</p>
     <h1>Gayuth</h1>
     <p>Name: Gayuth Waidyaratne</p>
     <p>email: gayuthdemika@gmail.com</p>
