--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <p>Name: Minsara</p>
     <p>email: minsarasammanitha@gmail.com</p>
     <h1>Gayuth</h1>
-    <p>Name: Gayuth Waidyaratne</p>
-    <p>email: gayuthdemika@gmail.com</p>
+    <p>Name: </p>
+    <p>email: </p>
     <h1>Luhansa</h1>
     <p>Name: </p>
     <p>email: </p>
@@ -22,4 +22,5 @@
 
 </body>
 </html>
+
 
