--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <h1>Minsara</h1>
-    <p>Name: Minsara</p>
-    <p>email: minsarasammanitha@gmail.com</p>
+    <p>Name: </p>
+    <p>email: </p>
     <h1>Gayuth</h1>
     <p>Name: </p>
     <p>email: </p>
@@ -22,5 +22,6 @@
 
 </body>
 </html>
+
 
 
