--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <p>Name: Gayuth Waidyaratne</p>
     <p>email: gayuthdemika@gmail.com</p>
     <h1>Luhansa</h1>
-    <p>Name: </p>
-    <p>email: </p>
+    <p>Name: Luhansa Sooriyabandara</p>
+    <p>email: praviniluhansa@gmail.com</p>
     <h1>Shagee</h1>
     <p>Name: </p>
     <p>email: </p>
