--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <p>Name: </p>
     <p>email: </p>
     <h1>Shagee</h1>
-    <p>Name: </p>
-    <p>email: </p>
+    <p>Name: shagee </p>
+    <p>email: it24103322@my.sliit.lk </p>
 
 </body>
 </html>
